fix header overlap

--- a/src/less/import/main.less
+++ b/src/less/import/main.less
@@ -132,15 +132,14 @@ header{
     .user-info {
         float: right;
         height: 60px;
-        margin-right: 25px;
+        margin-right: 45px;
         margin-top: 8px;
         position: relative;
-        width: 213px;
 
         .details{
             float: left;
             vertical-align: middle;
-            width: 150px;
+            min-width: 100px;
             height: 100%;
             text-align: right;
             .username{
